Fix sign up screen

--- a/website/signup.html
+++ b/website/signup.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+<div class="front-panel-anchor ">
 <div class="front-panel">
     <div class="banner"><a href="signin.html" style="text-align: left;">Login</a></div>
     <img src="img/ashes.png" class="ashes-logo" alt="">
@@ -20,6 +21,7 @@
     <!-- <div class="footer">
         <a href="privacypolicy.html">Privacy policy</a>
     </div> -->
+    </div>
 </div>
 
 </html>
