--- a/website/signup.html
+++ b/website/signup.html
@@ -7,7 +7,9 @@
 </head>
 <div class="front-panel-anchor ">
 <div class="front-panel">
-    <div class="banner"><a href="signin.html" style="text-align: left;">Login</a></div>
+    <div class="banner">
+        <a href="signin.html" style="text-align: left; margin:10px">Login</a>
+    </div>
     <img src="img/ashes.png" class="ashes-logo" alt="">
     <form id="signup-form">
         <div class="input-field-container">
